--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -50,5 +50,16 @@
    "Gallery": "Gallery",
    "SelectImage": "Select Image",
    "ImageDescription": "Image Title",
-   "UploadImage": "Upload A New Image To Your Gallery"
+   "UploadImage": "Upload A New Image To Your Gallery",
+   "EmojiPicker": {
+      "smileys_people": "Smiley's People",
+      "animals_nature": "Animals & Nature",
+      "food_drink": "Food & Drink",
+      "travel_places": "Travel & Places",
+      "activities": "Activities",
+      "objects": "Objects",
+      "symbols": "Symbols",
+      "flags": "Flags",
+      "recently_used": "Recently used"
+   }
 }
