cambio  de texto de boton cargar mas comentarios

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -45,7 +45,7 @@
    "NoComments": "No comments",
    "OpenComments": "Open comments",
    "CloseComments": "Close comments",
-   "LoadMore": "Load More",
+   "LoadMoreComments": "Load More Comments",
    "BackToHomePage": "Back to homepage",
    "Gallery": "Gallery",
    "SelectImage": "Select Image",
