--- a/frontend/public/locales/es/translation.json
+++ b/frontend/public/locales/es/translation.json
@@ -45,7 +45,7 @@
     "NoComments": "No hay Comentarios",
     "OpenComments": "Abrir comentarios",
     "CloseComments": "Cerrar comentarios",
-    "LoadMore": "Cargar mas",
+    "LoadMoreComments": "Cargar mas comentarios",
     "BackToHomePage": "Volver a la pagina principal",
     "Gallery": "Galeria",
     "SelectImage": "Seleccionar Imagen",
