--- a/frontend/public/locales/pt/translation.json
+++ b/frontend/public/locales/pt/translation.json
@@ -45,7 +45,7 @@
     "NoComments": "Não ha comentarios",
     "OpenComments": "Comentários abertos",
     "CloseComments": "Fechar comentários",
-    "LoadMore": "Carregue mais",
+    "LoadMoreComments": "Carregue mais comentários",
     "BackToHomePage": "Voltar à página principal",
     "Gallery": "Galeria",
     "SelectImage": "Selecione A Imagem",
