agregado traduccion al texto de no hay mas resultados

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -38,6 +38,7 @@
    "Online": "Online",
    "ConfirmationDeletePost": "Confirmation to delete post",
    "DeleteText": "Are you sure you want to delete post",
+   "NoMoreResults": "There are no more results",
    "Accept": "Accept",
    "Cancel": "Cancel",
    "Comment": "Comment",
