--- a/frontend/public/locales/pt/translation.json
+++ b/frontend/public/locales/pt/translation.json
@@ -38,6 +38,7 @@
     "Online": "Conectado",
     "ConfirmationDeletePost": "Confirmação para excluir postagem",
     "DeleteText": "Tem certeza de que deseja excluir a postagem",
+    "NoMoreResults": "Não há mais resultados",
     "Accept": "Aceitar",
     "Cancel": "Cancelar",
     "Comment": "Comente",
