pequeña mejora al mensaje de no results, agregada traduccion

--- a/frontend/public/locales/es/translation.json
+++ b/frontend/public/locales/es/translation.json
@@ -38,6 +38,7 @@
     "Online": "Conectado",
     "ConfirmationDeletePost": "Confirmacion para borrar post",
     "DeleteText": "Estas seguro que quieres borrar post",
+    "NoResults": "Lo sentimos, no pudimos encontrar ningún resultado que coincida con",
     "NoMoreResults": "No hay mas resultados",
     "Accept": "Aceptar",
     "Cancel": "Cancelar",
