--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -38,6 +38,7 @@
    "Online": "Online",
    "ConfirmationDeletePost": "Confirmation to delete post",
    "DeleteText": "Are you sure you want to delete post",
+   "NoResults": "Sorry, we couldn't find any results matching",
    "NoMoreResults": "There are no more results",
    "Accept": "Accept",
    "Cancel": "Cancel",
